--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DuroCap Roofing Solutions - Trusted Roofing Services in Kerala</title>
+    <meta name="description" content="DuroCap offers trusted, durable, and affordable roofing solutions for commercial and residential projects across Kerala. Quality roofing since 2015." />
   </head>
   <body class="dark:bg-gray-900">
     <div id="root"></div>
