--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DuroCap Roofing Solutions - Trusted Roofing Services in Kerala</title>
     <meta name="description" content="DuroCap offers trusted, durable, and affordable roofing solutions for commercial and residential projects across Kerala. Quality roofing since 2015." />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
   <body class="dark:bg-gray-900">
     <div id="root"></div>
