--- a/index.html
+++ b/index.html
@@ -33,6 +33,86 @@
     <meta name="geo.position" content="8.5241;76.9366" />
     <meta name="ICBM" content="8.5241, 76.9366" />
     
+    <!-- Structured Data (JSON-LD) for Organization -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Durocap Roofing Solutions",
+      "alternateName": "DuroCap",
+      "url": "https://durocap.com",
+      "logo": "https://durocap.com/favicon.png",
+      "description": "Trusted roofing sheet suppliers in Kerala. We deliver durable roofing materials, accessories, and custom roofing solutions for homes and commercial buildings.",
+      "email": "info@durocap.com",
+      "telephone": "+91-85938-52223",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Near IOC Gas Plant, Kolayil, Parippally P.O",
+        "addressLocality": "Kollam",
+        "addressRegion": "Kerala",
+        "postalCode": "691574",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "8.5241",
+        "longitude": "76.9366"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Kerala"
+      },
+      "sameAs": [
+        "https://durocap.com"
+      ],
+      "priceRange": "$$",
+      "openingHours": "Mo-Fr 09:00-18:00"
+    }
+    </script>
+
+    <!-- LocalBusiness Schema -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Durocap Roofing Solutions",
+      "image": "https://durocap.com/favicon.png",
+      "@id": "https://durocap.com",
+      "url": "https://durocap.com",
+      "telephone": "+91-85938-52223",
+      "email": "info@durocap.com",
+      "priceRange": "$$",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Near IOC Gas Plant, Kolayil, Parippally P.O",
+        "addressLocality": "Kollam",
+        "addressRegion": "Kerala",
+        "postalCode": "691574",
+        "addressCountry": "IN"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "8.5241",
+        "longitude": "76.9366"
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "sameAs": [
+        "https://durocap.com"
+      ]
+    }
+    </script>
+
     <!-- Razorpay Checkout Script -->
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </head>
